[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tool-result-validator-py"
version = "0.1.0"
description = "Validate tool output against a schema before returning to the LLM"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["llm", "agent", "validation", "tool-use", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/MukundaKatta/tool-result-validator-py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tool_result_validator = ["py.typed"]
